--- a/src/styles/base/_table.scss
+++ b/src/styles/base/_table.scss
@@ -6,6 +6,7 @@
   height: 100%;
   line-height: 1.4;
   border-collapse: collapse;
+  padding: 0 4px;
 
   tbody,
   thead {
